--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bindgen = "0.68.1"
+bindgen = { version = "0.68.1", default-features = false }
 libc = "0.2.149"
 
 [build-dependencies]
-bindgen = "*"
+bindgen = { version = "0.68.1", default-features = false }
